--- a/terminal/index.html
+++ b/terminal/index.html
@@ -7,15 +7,20 @@
 
 <title>Terminal - CLI</title>
 
-<link rel="stylesheet" href="dist/reset.css">
-<link rel="stylesheet" href="dist/reveal.css">
-<link rel="stylesheet" href="dist/theme/simple.css">
+<link rel="stylesheet" href="../dist/reset.css">
+<link rel="stylesheet" href="../dist/reveal.css">
+<link rel="stylesheet" href="../dist/theme/simple.css">
 
 <!-- Theme used for syntax highlighted code -->
-<link rel="stylesheet" href="plugin/highlight/monokai.css">
+<link rel="stylesheet" href="../plugin/highlight/monokai.css">
 <link rel="stylesheet"
 	href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/default.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script>
+<style>
+	:root {  
+  		--r-main-font-size: 30px;
+	}
+</style>
 </head>
 
 <body>
@@ -124,11 +129,11 @@
 	</div>
 </div>
 
-<script src="dist/reveal.js"></script>
-<script src="plugin/zoom/zoom.js"></script>
-<script src="plugin/notes/notes.js"></script>
-<script src="plugin/search/search.js"></script>
-<script src="plugin/markdown/markdown.js"></script>
+<script src="../dist/reveal.js"></script>
+<script src="../plugin/zoom/zoom.js"></script>
+<script src="../plugin/notes/notes.js"></script>
+<script src="../plugin/search/search.js"></script>
+<script src="../plugin/markdown/markdown.js"></script>
 <!-- <script src="plugin/highlight/highlight.js"></script> -->
 <script>
 	// Also available as an ES module, see:
