--- a/js/operadores.html
+++ b/js/operadores.html
@@ -28,7 +28,7 @@
             <section>
                 <h3>Javascript - Operadores</h3>
                 <!-- <img src="img/git-github-logo.jpg" alt="Git y GitHub" style="height: 280px; margin: 0 auto 4rem auto; background: transparent;" class="demo-logo"> -->
-
+                <p>Nos sirven para hacer operaciones con nuestros datos. Pueden ser:</p>
                 <ul>
                     <li>Lógicos</li>
                     <li>Aritméticos</li>
