--- a/DOM-BOM/index.html
+++ b/DOM-BOM/index.html
@@ -30,6 +30,39 @@
 
 
 		</section>
+		<section>
+			<h3>BOM </h3>
+			<h4>Browser Object Model</h4>
+			<ul>
+				<li>No hay un estandar oficial</li>
+				<li>Se accede a propiedades del navegador
+					<ul>
+						<li>Alto</li>
+						<li>Ancho</li>
+						<li>Nombre del navegador</li>
+						<li>url actual</li>
+					</ul>
+				</li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+
+
+		</section>
+
+		<section>
+			<h3>DOM </h3>
+			<h4>Document Model Object</h4>
+			<ul>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+
+
+		</section>
 		
 		<section>
 			<h3>Comandos básicos</h3>
